# tei-loop

./: .gitignore  README.md  my_agent.py  pyproject.toml
examples/: quickstart_agent.py
tei_loop/: __init__.py  __main__.py  checkpoint_scanner.py  cli.py  evaluator.py  improver.py  llm_provider.py  loop.py  metric_proposer.py  models.py  pareto.py  prompt_evaluator.py  prompt_improver.py  prompt_optimizer.py  structural_fixer.py  tracer.py
tei_loop/adapters/: __init__.py  crewai.py  generic.py  langgraph.py
tei_loop/dimensions/: __init__.py  base.py  execution_accuracy.py  output_integrity.py  reasoning_soundness.py  target_alignment.py
tei_loop/tests/: test_evaluator.py  test_improver.py  test_llm_provider.py  test_loop.py  test_models.py  test_pareto.py  test_tracer.py
