[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tei-loop"
version = "1.0.0"
description = "TEI: Target, Evaluate, Improve — self-improving loop for agentic systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Orkhan Javadli", email = "ojavadli@gmail.com"},
]
keywords = [
    "agents",
    "evaluation",
    "improvement",
    "llm",
    "agentic-systems",
    "self-improving",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
google = ["google-generativeai>=0.8"]
all = [
    "openai>=1.40",
    "anthropic>=0.34",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
tei = "tei_loop.cli:main"

[project.urls]
Homepage = "https://github.com/ojavadli/tei-loop"
Repository = "https://github.com/ojavadli/tei-loop"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tei_loop/tests"]
